crates/tests/fixtures/harness/data/error/arch_invalid_name/input.rdl
#[win32]
mod Test {
    #[arch(X86_32)]
    struct A { x: u8, }
}
